docs/RECO/25.05.0/index.md
```
=== -----------------------------------------------------------------------------------------------------------------------------------------------------------+-------------- ===
  Total Size: Unknown

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 7235/7235 (complete)
  Total Size: 1.127 TB (7235 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.054 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/CC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 5049/5049 (complete)
  Total Size: 944.006 GB (5049 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/5x41/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 3222/3222 (complete)
  Total Size: 479.893 GB (3222 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 610/610 (complete)
  Total Size: 38.270 GB (610 files)

=== epic:/RECO/25.05.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x100/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 33904/33904 (complete)
  Total Size: 5.186 TB (33904 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 67/67 (complete)
  Total Size: 14.337 GB (67 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 54/54 (complete)
  Total Size: 6.787 GB (54 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 148/148 (complete)
  Total Size: 24.388 GB (148 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.483 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 83/83 (complete)
  Total Size: 9.855 GB (83 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 68/68 (complete)
  Total Size: 13.797 GB (68 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 229/229 (complete)
  Total Size: 34.235 GB (229 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 425/425 (complete)
  Total Size: 67.718 GB (425 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 216/216 (complete)
  Total Size: 7.699 GB (216 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.132 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.701 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 71/71 (complete)
  Total Size: 13.205 GB (71 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 90/90 (complete)
  Total Size: 16.591 GB (90 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 400/400 (complete)
  Total Size: 56.880 GB (400 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 197/197 (complete)
  Total Size: 25.008 GB (197 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 34/34 (complete)
  Total Size: 6.551 GB (34 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 5.114 GB (22 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 100/100 (complete)
  Total Size: 23.598 GB (100 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 108/108 (complete)
  Total Size: 25.482 GB (108 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 7.612 GB (23 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 45/45 (complete)
  Total Size: 6.286 GB (45 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 122/122 (complete)
  Total Size: 23.613 GB (122 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 6.007 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 213/213 (complete)
  Total Size: 33.581 GB (213 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 71/71 (complete)
  Total Size: 11.062 GB (71 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 500/500 (complete)
  Total Size: 34.592 GB (500 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 5.471 GB (40 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 205/205 (complete)
  Total Size: 24.630 GB (205 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 1052/1052 (complete)
  Total Size: 116.091 GB (1052 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 19.252 GB (114 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 1.897 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 73/73 (complete)
  Total Size: 13.331 GB (73 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 9.039 GB (32 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 10.655 GB (42 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 257/257 (complete)
  Total Size: 32.624 GB (257 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 56/56 (complete)
  Total Size: 11.791 GB (56 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.568 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 212/212 (complete)
  Total Size: 5.729 GB (212 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 71/71 (complete)
  Total Size: 14.027 GB (71 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 1.949 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 491/491 (complete)
  Total Size: 58.945 GB (491 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 33/33 (complete)
  Total Size: 5.603 GB (33 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.362 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 54/54 (complete)
  Total Size: 13.516 GB (54 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 137/137 (complete)
  Total Size: 32.803 GB (137 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 218/218 (complete)
  Total Size: 31.881 GB (218 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 230/230 (complete)
  Total Size: 8.256 GB (230 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 248/248 (complete)
  Total Size: 47.367 GB (248 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 8.472 GB (27 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 6.265 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 409/409 (complete)
  Total Size: 56.064 GB (409 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/100GeV ===
  RSE: JLAB-TAPE-SE                              Files: 6987/6987 (complete)
  Total Size: 694.990 GB (6987 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/RealisticSignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 2.360 GB (30 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/18x275/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 503/503 (complete)
  Total Size: 23.579 GB (503 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 198/198 (complete)
  Total Size: 8.786 GB (198 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 6.765 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 11.457 GB (46 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 136/136 (complete)
  Total Size: 29.935 GB (136 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.510 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 120/120 (complete)
  Total Size: 22.488 GB (120 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 232/232 (complete)
  Total Size: 11.185 GB (232 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 123/123 (complete)
  Total Size: 29.403 GB (123 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 118/118 (complete)
  Total Size: 6.873 GB (118 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eRu/ep/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 310/310 (complete)
  Total Size: 41.010 GB (310 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 1290/1290 (complete)
  Total Size: 50.548 GB (1290 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 357/357 (complete)
  Total Size: 45.022 GB (357 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 150/150 (complete)
  Total Size: 31.159 GB (150 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 297/297 (complete)
  Total Size: 28.133 GB (297 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.504 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 218/218 (complete)
  Total Size: 38.018 GB (218 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 340/340 (complete)
  Total Size: 13.156 GB (340 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 14.568 GB (63 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eCu/ep/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 439/439 (complete)
  Total Size: 60.034 GB (439 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 7.660 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 157/157 (complete)
  Total Size: 22.088 GB (157 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/10x100/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 4696/4696 (complete)
  Total Size: 672.776 GB (4696 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/18x275/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 8377/8377 (complete)
  Total Size: 827.993 GB (8377 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 15287/15287 (complete)
  Total Size: 1.878 TB (15287 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 658/658 (complete)
  Total Size: 63.347 GB (658 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 231/231 (complete)
  Total Size: 11.120 GB (231 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 238/238 (complete)
  Total Size: 45.180 GB (238 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 6.247 GB (35 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 73/73 (complete)
  Total Size: 15.477 GB (73 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/275GeV ===
  RSE: JLAB-TAPE-SE                              Files: 15479/15479 (complete)
  Total Size: 1.465 TB (15479 files)

=== epic:/RECO/25.05.0/epic_craterlake/Bkg_OnlyPer2usFrame/Synrad_18GeV_Vac_10000Ahr_Egas_18GeV_Hgas_275GeV/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/275GeV ===
  RSE: JLAB-TAPE-SE                              Files: 22478/22478 (complete)
  Total Size: 1.497 TB (22478 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_100to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 558/558 (complete)
  Total Size: 46.151 GB (558 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 287/287 (complete)
  Total Size: 37.185 GB (287 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 16/16 (complete)
  Total Size: 3.007 GB (16 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eRu/en/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 515/515 (complete)
  Total Size: 74.508 GB (515 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 149/149 (complete)
  Total Size: 19.598 GB (149 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eCu/en/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 471/471 (complete)
  Total Size: 74.012 GB (471 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 264/264 (complete)
  Total Size: 18.228 GB (264 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 48/48 (complete)
  Total Size: 12.166 GB (48 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 7.135 GB (46 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 213/213 (complete)
  Total Size: 22.689 GB (213 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/coherent_eCu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 334/334 (complete)
  Total Size: 912.995 MB (334 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.054 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 15.212 GB (63 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.261 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 107/107 (complete)
  Total Size: 21.091 GB (107 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 155/155 (complete)
  Total Size: 22.354 GB (155 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 333/333 (complete)
  Total Size: 45.733 GB (333 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 209/209 (complete)
  Total Size: 44.093 GB (209 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 61/61 (complete)
  Total Size: 15.648 GB (61 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/10x100/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 5823/5823 (complete)
  Total Size: 959.153 GB (5823 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 8234/8234 (complete)
  Total Size: 1.284 TB (8234 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/mu-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 254/254 (complete)
  Total Size: 51.146 GB (254 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 1648/1648 (complete)
  Total Size: 220.278 GB (1648 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/CC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 4944/4944 (complete)
  Total Size: 934.695 GB (4944 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/5x41/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 3833/3833 (complete)
  Total Size: 617.776 GB (3833 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 162/162 (complete)
  Total Size: 25.493 GB (162 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/CC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 2604/2604 (complete)
  Total Size: 531.660 GB (2604 files)

=== epic:/RECO/25.05.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/5x41/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 19031/19031 (complete)
  Total Size: 3.345 TB (19031 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 221/221 (complete)
  Total Size: 27.811 GB (221 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 217/217 (complete)
  Total Size: 42.064 GB (217 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 123/123 (complete)
  Total Size: 12.964 GB (123 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 5.975 GB (28 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 12.637 GB (114 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.493 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 362/362 (complete)
  Total Size: 56.988 GB (362 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.234 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 161/161 (complete)
  Total Size: 16.724 GB (161 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 2.651 GB (23 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 3.211 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.218 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 34/34 (complete)
  Total Size: 4.538 GB (34 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 204/204 (complete)
  Total Size: 36.450 GB (204 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 1.560 GB (20 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 60/60 (complete)
  Total Size: 10.039 GB (60 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 204/204 (complete)
  Total Size: 27.414 GB (204 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 102/102 (complete)
  Total Size: 16.694 GB (102 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 29/29 (complete)
  Total Size: 4.685 GB (29 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 8.839 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 81/81 (complete)
  Total Size: 7.790 GB (81 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 56/56 (complete)
  Total Size: 8.722 GB (56 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 72/72 (complete)
  Total Size: 8.759 GB (72 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 178/178 (complete)
  Total Size: 24.913 GB (178 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 65/65 (complete)
  Total Size: 13.161 GB (65 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 1.817 GB (27 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 784/784 (complete)
  Total Size: 79.789 GB (784 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 10.728 GB (46 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 3.996 GB (23 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 66/66 (complete)
  Total Size: 13.177 GB (66 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 6.889 GB (35 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 88/88 (complete)
  Total Size: 17.673 GB (88 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 24.990 GB (114 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 7.550 GB (59 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 179/179 (complete)
  Total Size: 30.786 GB (179 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 3.517 GB (21 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 395/395 (complete)
  Total Size: 51.198 GB (395 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 3.939 GB (22 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 49/49 (complete)
  Total Size: 7.120 GB (49 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 52/52 (complete)
  Total Size: 11.483 GB (52 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 169/169 (complete)
  Total Size: 4.932 GB (169 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 284/284 (complete)
  Total Size: 28.080 GB (284 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 272/272 (complete)
  Total Size: 10.476 GB (272 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 262/262 (complete)
  Total Size: 21.013 GB (262 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 1.770 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 273/273 (complete)
  Total Size: 42.462 GB (273 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 1.548 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 453/453 (complete)
  Total Size: 67.698 GB (453 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 464/464 (complete)
  Total Size: 57.650 GB (464 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 504/504 (complete)
  Total Size: 67.322 GB (504 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 77/77 (complete)
  Total Size: 13.285 GB (77 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 70/70 (complete)
  Total Size: 10.941 GB (70 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 104/104 (complete)
  Total Size: 17.534 GB (104 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 311/311 (complete)
  Total Size: 7.746 GB (311 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 258/258 (complete)
  Total Size: 42.534 GB (258 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 7.338 GB (50 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 67/67 (complete)
  Total Size: 13.258 GB (67 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 98/98 (complete)
  Total Size: 17.518 GB (98 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 193/193 (complete)
  Total Size: 16.937 GB (193 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 162/162 (complete)
  Total Size: 10.678 GB (162 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.039 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 98/98 (complete)
  Total Size: 11.904 GB (98 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.004 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 205/205 (complete)
  Total Size: 25.639 GB (205 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 317/317 (complete)
  Total Size: 18.628 GB (317 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 87/87 (complete)
  Total Size: 12.150 GB (87 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 85/85 (complete)
  Total Size: 2.499 GB (85 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 1.802 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 205/205 (complete)
  Total Size: 17.892 GB (205 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 143/143 (complete)
  Total Size: 23.842 GB (143 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 251/251 (complete)
  Total Size: 32.222 GB (251 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 115/115 (complete)
  Total Size: 17.620 GB (115 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 135/135 (complete)
  Total Size: 4.788 GB (135 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 1.546 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 43/43 (complete)
  Total Size: 9.907 GB (43 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.501 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/1SignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 13/13 (complete)
  Total Size: 1.898 GB (13 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/10x130/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 190/190 (complete)
  Total Size: 10.667 GB (190 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x41/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 39/39 (complete)
  Total Size: 3.863 GB (39 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_1_10/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 313/313 (complete)
  Total Size: 34.209 GB (313 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 257/257 (complete)
  Total Size: 34.126 GB (257 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 251/251 (complete)
  Total Size: 29.237 GB (251 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 112/112 (complete)
  Total Size: 13.796 GB (112 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 220/220 (complete)
  Total Size: 24.659 GB (220 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_10_20/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 108/108 (complete)
  Total Size: 7.863 GB (108 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/sartre1.39-1.0/eAu/coherent/bsat/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 1337/1337 (complete)
  Total Size: 198.716 GB (1337 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/coherent_eRu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 527/527 (complete)
  Total Size: 1.128 GB (527 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/coherent_eCu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 334/334 (complete)
  Total Size: 696.400 MB (334 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/coherent_eRu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 499/499 (complete)
  Total Size: 875.167 MB (499 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 820/820 (complete)
  Total Size: 86.098 GB (820 files)

=== epic:/RECO/25.05.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/18x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 85442/85442 (complete)
  Total Size: 8.181 TB (85442 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/18x275/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 9800/9800 (complete)
  Total Size: 1.142 TB (9800 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/SYNRAD/dataprod_rel_1.0.0/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 33/33 (complete)
  Total Size: 1.868 GB (33 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 169/169 (complete)
  Total Size: 22.974 GB (169 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.891 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/GETaLM1.0.0-1.0/10GeV ===
  RSE: JLAB-TAPE-SE                              Files: 3017/3017 (complete)
  Total Size: 541.901 GB (3017 files)

=== epic:/RECO/25.05.0/epic_craterlake/Bkg_1SignalPer2usFrame/Synrad_18GeV_Vac_10000Ahr_Egas_18GeV_Hgas_275GeV/DIS/NC/18x275/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 14034/14034 (complete)
  Total Size: 839.144 GB (14034 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 349/349 (complete)
  Total Size: 34.564 GB (349 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 265/265 (complete)
  Total Size: 17.896 GB (265 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 5629/5629 (complete)
  Total Size: 730.198 GB (5629 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 238/238 (complete)
  Total Size: 31.711 GB (238 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 107/107 (complete)
  Total Size: 16.192 GB (107 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 7.220 GB (40 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 231/231 (complete)
  Total Size: 27.825 GB (231 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/2GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 461/461 (complete)
  Total Size: 94.127 GB (461 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 12.468 GB (42 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 13.564 GB (59 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.707 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/10x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 142/142 (complete)
  Total Size: 8.978 GB (142 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 44/44 (complete)
  Total Size: 8.353 GB (44 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 2007/2007 (complete)
  Total Size: 115.138 GB (2007 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 57/57 (complete)
  Total Size: 13.965 GB (57 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DVMP/EpIC1.0.0-1.1 ===
  RSE: JLAB-TAPE-SE                              Files: 69/69 (complete)
  Total Size: 2.522 GB (69 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/CC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 9118/9118 (complete)
  Total Size: 1.334 TB (9118 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 2007/2007 (complete)
  Total Size: 114.539 GB (2007 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/100MeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 90/90 (complete)
  Total Size: 13.443 GB (90 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_20_35/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 106/106 (complete)
  Total Size: 8.012 GB (106 files)

=== epic:/RECO/25.05.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 71812/71812 (complete)
  Total Size: 7.587 TB (71812 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 239/239 (complete)
  Total Size: 34.612 GB (239 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 206/206 (complete)
  Total Size: 8.887 GB (206 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 560/560 (complete)
  Total Size: 85.809 GB (560 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 49/49 (complete)
  Total Size: 12.423 GB (49 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/CC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 9834/9834 (complete)
  Total Size: 1.450 TB (9834 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_3_10/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 106/106 (complete)
  Total Size: 3.581 GB (106 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 160/160 (complete)
  Total Size: 10.015 GB (160 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 3.896 GB (22 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 51/51 (complete)
  Total Size: 7.877 GB (51 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 348/348 (complete)
  Total Size: 42.304 GB (348 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.981 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 56/56 (complete)
  Total Size: 11.605 GB (56 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 410/410 (complete)
  Total Size: 67.673 GB (410 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.983 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 177/177 (complete)
  Total Size: 20.387 GB (177 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 39/39 (complete)
  Total Size: 5.114 GB (39 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 89/89 (complete)
  Total Size: 11.000 GB (89 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 4.225 GB (24 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 358/358 (complete)
  Total Size: 46.805 GB (358 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 403/403 (complete)
  Total Size: 36.895 GB (403 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 204/204 (complete)
  Total Size: 6.721 GB (204 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 4.209 GB (22 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 313/313 (complete)
  Total Size: 34.753 GB (313 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 106/106 (complete)
  Total Size: 18.878 GB (106 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 9.576 GB (59 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 152/152 (complete)
  Total Size: 27.934 GB (152 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 1.957 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 987/987 (complete)
  Total Size: 108.260 GB (987 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.310 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 101/101 (complete)
  Total Size: 17.122 GB (101 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 202/202 (complete)
  Total Size: 11.924 GB (202 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 2.139 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 81/81 (complete)
  Total Size: 11.893 GB (81 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 137/137 (complete)
  Total Size: 14.158 GB (137 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 3.073 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 79/79 (complete)
  Total Size: 16.922 GB (79 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 234/234 (complete)
  Total Size: 35.597 GB (234 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 54/54 (complete)
  Total Size: 11.657 GB (54 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 4.199 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 7.383 GB (46 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 116/116 (complete)
  Total Size: 18.763 GB (116 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 107/107 (complete)
  Total Size: 18.478 GB (107 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 3.741 GB (20 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 62/62 (complete)
  Total Size: 13.804 GB (62 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 2.238 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 7.252 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 287/287 (complete)
  Total Size: 32.975 GB (287 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 6.958 GB (41 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/neutron/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 5.084 GB (22 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 134/134 (complete)
  Total Size: 23.179 GB (134 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/proton/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.652 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 172/172 (complete)
  Total Size: 19.298 GB (172 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 88/88 (complete)
  Total Size: 9.513 GB (88 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.048 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 6.878 GB (41 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 172/172 (complete)
  Total Size: 23.004 GB (172 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 52/52 (complete)
  Total Size: 12.059 GB (52 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 312/312 (complete)
  Total Size: 18.961 GB (312 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 5.560 GB (36 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/kaon+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 6.012 GB (31 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 245/245 (complete)
  Total Size: 37.033 GB (245 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 39/39 (complete)
  Total Size: 10.224 GB (39 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 434/434 (complete)
  Total Size: 61.975 GB (434 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 243/243 (complete)
  Total Size: 22.449 GB (243 files)

=== epic:/RECO/25.05.0/epic_craterlake/Bkg_RealisticSignalPer2usFrame/Synrad_18GeV_Vac_10000Ahr_Egas_18GeV_Hgas_275GeV/SIDIS/pythia6-eic/1.0.0/18x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 187093/187093 (complete)
  Total Size: 8.545 TB (187093 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/5x41 ===
  RSE: JLAB-TAPE-SE                              Files: 2484/2484 (complete)
  Total Size: 147.561 GB (2484 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_10to100 ===
  RSE: JLAB-TAPE-SE                              Files: 556/556 (complete)
  Total Size: 38.793 GB (556 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_1to10 ===
  RSE: JLAB-TAPE-SE                              Files: 279/279 (complete)
  Total Size: 15.846 GB (279 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 401/401 (complete)
  Total Size: 34.342 GB (401 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 184/184 (complete)
  Total Size: 14.951 GB (184 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 352/352 (complete)
  Total Size: 15.305 GB (352 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 263/263 (complete)
  Total Size: 18.016 GB (263 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 266/266 (complete)
  Total Size: 9.901 GB (266 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/Sartre/Coherent ===
  RSE: JLAB-TAPE-SE                              Files: 25092/25092 (complete)
  Total Size: 927.677 GB (25092 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/EpIC_v1.1.6-1.0/10x130/q2_1_100 ===
  RSE: JLAB-TAPE-SE                              Files: 860/860 (complete)
  Total Size: 27.279 GB (860 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/gamma/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 222/222 (complete)
  Total Size: 34.243 GB (222 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 2403/2403 (complete)
  Total Size: 61.779 GB (2403 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 244/244 (complete)
  Total Size: 36.843 GB (244 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 544/544 (complete)
  Total Size: 86.015 GB (544 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 373/373 (complete)
  Total Size: 53.945 GB (373 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 119/119 (complete)
  Total Size: 15.947 GB (119 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/UCHANNEL_PI0/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 121/121 (complete)
  Total Size: 6.235 GB (121 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/UCHANNEL_RHO/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 53/53 (complete)
  Total Size: 3.404 GB (53 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/10x100/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 3657/3657 (complete)
  Total Size: 295.191 GB (3657 files)

=== epic:/RECO/25.05.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 560/560 (complete)
  Total Size: 85.499 GB (560 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 3.972 GB (19 files)

=== epic:/RECO/25.05.0/epic_craterlake/DIS/NC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 11957/11957 (complete)
  Total Size: 1.456 TB (11957 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/e-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.083 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.898 GB (18 files)

=== epic:/RECO/25.05.0/epic_craterlake/SINGLE/pi0/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 38/38 (complete)
  Total Size: 5.893 GB (38 files)

=== CAMPAIGN SUMMARY ===
  RSE: JLAB-TAPE-SE                              Total Size: 61.775 TB        Total Files: 665368
```
