docs/RECO/25.07.0/index.md
```
=== -----------------------------------------------------------------------------------------------------------------------------------------------+-------------- ===
  Total Size: Unknown

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/10x100/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 4358/4358 (complete)
  Total Size: 602.271 GB (4358 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 1519/1519 (complete)
  Total Size: 46.565 GB (1519 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/CC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 6645/6645 (complete)
  Total Size: 986.567 GB (6645 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/DIS/BeAGLE1.03.02-1.0/eAu/10x100/q2_1to10 ===
  RSE: JLAB-TAPE-SE                              Files: 5096/5096 (complete)
  Total Size: 546.571 GB (5096 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/DIS/BeAGLE1.03.02-1.0/eAu/5x41/q2_1to10 ===
  RSE: JLAB-TAPE-SE                              Files: 3398/3398 (complete)
  Total Size: 417.240 GB (3398 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eRu/ep/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 377/377 (complete)
  Total Size: 38.346 GB (377 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_10to100 ===
  RSE: JLAB-TAPE-SE                              Files: 760/760 (complete)
  Total Size: 34.265 GB (760 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_1to10 ===
  RSE: JLAB-TAPE-SE                              Files: 381/381 (complete)
  Total Size: 13.055 GB (381 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 222/222 (complete)
  Total Size: 50.274 GB (222 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.979 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 106/106 (complete)
  Total Size: 28.118 GB (106 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/10x100/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 3690/3690 (complete)
  Total Size: 316.839 GB (3690 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 319/319 (complete)
  Total Size: 60.612 GB (319 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 610/610 (complete)
  Total Size: 92.360 GB (610 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 664/664 (complete)
  Total Size: 98.341 GB (664 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 17.520 GB (41 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 4.013 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.351 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 1103/1103 (complete)
  Total Size: 131.702 GB (1103 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 139/139 (complete)
  Total Size: 30.553 GB (139 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 1981/1981 (complete)
  Total Size: 123.788 GB (1981 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 245/245 (complete)
  Total Size: 30.820 GB (245 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 238/238 (complete)
  Total Size: 44.248 GB (238 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 52/52 (complete)
  Total Size: 10.440 GB (52 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 82/82 (complete)
  Total Size: 20.365 GB (82 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 87/87 (complete)
  Total Size: 28.209 GB (87 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 14.666 GB (59 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 117/117 (complete)
  Total Size: 34.166 GB (117 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 6.820 GB (19 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 6.057 GB (27 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 10.123 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 2.180 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 118/118 (complete)
  Total Size: 13.723 GB (118 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_3_10/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 92/92 (complete)
  Total Size: 2.870 GB (92 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 232/232 (complete)
  Total Size: 25.452 GB (232 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 266/266 (complete)
  Total Size: 33.216 GB (266 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_10_20/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 94/94 (complete)
  Total Size: 6.140 GB (94 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 4.494 GB (24 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/SIDIS/D0_ABCONV/HFsim-BeAGLE/BeAGLE1.03.01-1.0/eAu/10x100/q2_1to10000 ===
  RSE: JLAB-TAPE-SE                              Files: 41241/41241 (complete)
  Total Size: 174.709 GB (41241 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/Lc_ABCONV/HFsim-PYTHIA/pythia8.306-1.2/ep/10x100/q2_1to10000/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 4998/4998 (complete)
  Total Size: 134.559 GB (4998 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 467/467 (complete)
  Total Size: 69.832 GB (467 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 21.074 GB (63 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 10.393 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 37/37 (complete)
  Total Size: 18.076 GB (37 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 25/25 (complete)
  Total Size: 5.514 GB (25 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 1.653 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 111/111 (complete)
  Total Size: 23.150 GB (111 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 2.289 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.746 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 19/19 (complete)
  Total Size: 5.215 GB (19 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.598 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.342 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 3.308 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 208/208 (complete)
  Total Size: 31.682 GB (208 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 256/256 (complete)
  Total Size: 52.974 GB (256 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 459/459 (complete)
  Total Size: 81.020 GB (459 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 128/128 (complete)
  Total Size: 23.165 GB (128 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 249/249 (complete)
  Total Size: 44.156 GB (249 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 10.495 GB (27 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 414/414 (complete)
  Total Size: 69.920 GB (414 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 156/156 (complete)
  Total Size: 38.936 GB (156 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 266/266 (complete)
  Total Size: 53.027 GB (266 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 151/151 (complete)
  Total Size: 36.040 GB (151 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 69/69 (complete)
  Total Size: 31.814 GB (69 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 61/61 (complete)
  Total Size: 17.200 GB (61 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 129/129 (complete)
  Total Size: 28.210 GB (129 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 213/213 (complete)
  Total Size: 41.410 GB (213 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 93/93 (complete)
  Total Size: 24.509 GB (93 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 7.854 GB (28 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 10.534 GB (22 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 3.266 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.869 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 5.495 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 236/236 (complete)
  Total Size: 51.361 GB (236 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.976 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 5.369 GB (41 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 403/403 (complete)
  Total Size: 80.011 GB (403 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 62/62 (complete)
  Total Size: 11.893 GB (62 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 186/186 (complete)
  Total Size: 34.476 GB (186 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 396/396 (complete)
  Total Size: 70.248 GB (396 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 18.498 GB (42 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 75/75 (complete)
  Total Size: 11.299 GB (75 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 102/102 (complete)
  Total Size: 32.117 GB (102 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 206/206 (complete)
  Total Size: 42.721 GB (206 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 243/243 (complete)
  Total Size: 51.270 GB (243 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 405/405 (complete)
  Total Size: 79.997 GB (405 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 175/175 (complete)
  Total Size: 17.164 GB (175 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 144/144 (complete)
  Total Size: 49.103 GB (144 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 126/126 (complete)
  Total Size: 46.815 GB (126 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 5.467 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 15.596 GB (32 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 144/144 (complete)
  Total Size: 37.159 GB (144 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 1.658 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 125/125 (complete)
  Total Size: 20.026 GB (125 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 128/128 (complete)
  Total Size: 29.358 GB (128 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 2.261 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 226/226 (complete)
  Total Size: 49.727 GB (226 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 8.717 GB (22 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 26/26 (complete)
  Total Size: 7.158 GB (26 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.237 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 159/159 (complete)
  Total Size: 38.846 GB (159 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 255/255 (complete)
  Total Size: 50.501 GB (255 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 4.938 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.565 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 4.648 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 7.827 GB (31 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 242/242 (complete)
  Total Size: 47.098 GB (242 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 67/67 (complete)
  Total Size: 21.990 GB (67 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/GETaLM1.0.0-1.0/10GeV ===
  RSE: JLAB-TAPE-SE                              Files: 2784/2784 (complete)
  Total Size: 517.864 GB (2784 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/1SignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 13/13 (complete)
  Total Size: 1.929 GB (13 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/18x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 52977/52977 (complete)
  Total Size: 6.497 TB (52977 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x275/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 52075/52075 (complete)
  Total Size: 5.813 TB (52075 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 16608/16608 (complete)
  Total Size: 1.759 TB (16608 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/5x41/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 6312/6312 (complete)
  Total Size: 459.371 GB (6312 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/CC/18x275/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 13658/13658 (complete)
  Total Size: 1.507 TB (13658 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/Sartre/Coherent ===
  RSE: JLAB-TAPE-SE                              Files: 21927/21927 (complete)
  Total Size: 1.118 TB (21927 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eCu/ep/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 465/465 (complete)
  Total Size: 55.465 GB (465 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eHe3/10x166/q2_100to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 762/762 (complete)
  Total Size: 41.686 GB (762 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 8.616 GB (31 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_20_35/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 92/92 (complete)
  Total Size: 5.843 GB (92 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/10x130/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 181/181 (complete)
  Total Size: 10.407 GB (181 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 29/29 (complete)
  Total Size: 8.526 GB (29 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 132/132 (complete)
  Total Size: 35.050 GB (132 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/coherent_eRu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 303/303 (complete)
  Total Size: 958.387 MB (303 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/coherent_eCu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 201/201 (complete)
  Total Size: 839.110 MB (201 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 10.415 GB (22 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 49/49 (complete)
  Total Size: 17.694 GB (49 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 12.934 GB (28 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 15.640 GB (40 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/UCHANNEL_PI0/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 109/109 (complete)
  Total Size: 3.032 GB (109 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/UCHANNEL_RHO/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 48/48 (complete)
  Total Size: 2.996 GB (48 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DVMP/EpIC1.0.0-1.1 ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 2.328 GB (63 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 402/402 (complete)
  Total Size: 67.207 GB (402 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 212/212 (complete)
  Total Size: 46.710 GB (212 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 41/41 (complete)
  Total Size: 4.081 GB (41 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 99/99 (complete)
  Total Size: 20.402 GB (99 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 52/52 (complete)
  Total Size: 15.686 GB (52 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 165/165 (complete)
  Total Size: 11.826 GB (165 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 58/58 (complete)
  Total Size: 12.780 GB (58 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 360/360 (complete)
  Total Size: 25.761 GB (360 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 223/223 (complete)
  Total Size: 13.846 GB (223 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 497/497 (complete)
  Total Size: 36.366 GB (497 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 7.126 GB (40 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 38/38 (complete)
  Total Size: 15.825 GB (38 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.239 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_1_10/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 324/324 (complete)
  Total Size: 34.538 GB (324 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/60GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 1028/1028 (complete)
  Total Size: 123.370 GB (1028 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 119/119 (complete)
  Total Size: 10.189 GB (119 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/18x275/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 342/342 (complete)
  Total Size: 18.886 GB (342 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 72/72 (complete)
  Total Size: 25.693 GB (72 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 9.251 GB (31 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/SIDIS/Lc_ABCONV/HFsim-BeAGLE/BeAGLE1.03.01-1.0/eAu/10x100/q2_1to10000 ===
  RSE: JLAB-TAPE-SE                              Files: 34833/34833 (complete)
  Total Size: 128.915 GB (34833 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 17.834 GB (30 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 64/64 (complete)
  Total Size: 10.228 GB (64 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 48/48 (complete)
  Total Size: 16.506 GB (48 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 33/33 (complete)
  Total Size: 12.110 GB (33 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 7.059 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 220/220 (complete)
  Total Size: 70.130 GB (220 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 13.403 GB (32 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 444/444 (complete)
  Total Size: 80.976 GB (444 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 223/223 (complete)
  Total Size: 52.842 GB (223 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 149/149 (complete)
  Total Size: 36.038 GB (149 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 229/229 (complete)
  Total Size: 45.573 GB (229 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 65/65 (complete)
  Total Size: 17.212 GB (65 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 52/52 (complete)
  Total Size: 15.937 GB (52 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 34/34 (complete)
  Total Size: 10.569 GB (34 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.726 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 4.237 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 84/84 (complete)
  Total Size: 33.417 GB (84 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 7.163 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 63/63 (complete)
  Total Size: 22.922 GB (63 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 8.706 GB (36 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 4.234 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 47/47 (complete)
  Total Size: 18.301 GB (47 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.870 GB (17 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/100MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 8.690 GB (28 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 226/226 (complete)
  Total Size: 46.031 GB (226 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 4.607 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 27/27 (complete)
  Total Size: 6.756 GB (27 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 11.542 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 43/43 (complete)
  Total Size: 11.419 GB (43 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 439/439 (complete)
  Total Size: 74.968 GB (439 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 17.461 GB (46 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 244/244 (complete)
  Total Size: 66.571 GB (244 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 38/38 (complete)
  Total Size: 9.832 GB (38 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 71/71 (complete)
  Total Size: 17.977 GB (71 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 95/95 (complete)
  Total Size: 30.244 GB (95 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 14.758 GB (32 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/1GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 42/42 (complete)
  Total Size: 12.091 GB (42 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 11.779 GB (32 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 3.917 GB (17 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 8.192 GB (28 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.461 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 35/35 (complete)
  Total Size: 14.997 GB (35 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/10GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 148/148 (complete)
  Total Size: 37.653 GB (148 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 257/257 (complete)
  Total Size: 49.482 GB (257 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 37/37 (complete)
  Total Size: 14.998 GB (37 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 9.963 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/275GeV ===
  RSE: JLAB-TAPE-SE                              Files: 10902/10902 (complete)
  Total Size: 1.244 TB (10902 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/coulomb/EIC_ESR_Xsuite/dataprod_rel_1.0.0/18x275/10000Ahr/MachineRuntime10ms ===
  RSE: JLAB-TAPE-SE                              Files: 7/7 (complete)
  Total Size: 2.753 GB (7 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/touschek/EIC_ESR_Xsuite/dataprod_rel_1.0.0/18x275/10000Ahr/MachineRuntime10ms ===
  RSE: JLAB-TAPE-SE                              Files: 4/4 (complete)
  Total Size: 1.237 GB (4 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/GETaLM1.0.0-1.1/18GeV ===
  RSE: JLAB-TAPE-SE                              Files: 2808/2808 (complete)
  Total Size: 473.188 GB (2808 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/D0_ABCONV/HFsim-PYTHIA/pythia8.306-1.2/ep/5x41/q2_1to10000/hiDiv ===
  RSE: JLAB-TAPE-SE                              Files: 1998/1998 (complete)
  Total Size: 126.959 GB (1998 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 125/125 (complete)
  Total Size: 30.397 GB (125 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 183/183 (complete)
  Total Size: 12.092 GB (183 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 2.449 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eRu/en/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 580/580 (complete)
  Total Size: 66.219 GB (580 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_10_20/K+Lambda ===
  RSE: JLAB-TAPE-SE                              Files: 123/123 (complete)
  Total Size: 15.555 GB (123 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 39/39 (complete)
  Total Size: 11.436 GB (39 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 250/250 (complete)
  Total Size: 36.210 GB (250 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 121/121 (complete)
  Total Size: 35.562 GB (121 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/5x41/q2_20_35/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 266/266 (complete)
  Total Size: 30.485 GB (266 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 3.762 GB (17 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 40/40 (complete)
  Total Size: 13.500 GB (40 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/10x100/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 6973/6973 (complete)
  Total Size: 1.086 TB (6973 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/CC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 7296/7296 (complete)
  Total Size: 1.038 TB (7296 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 1.658 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/5x41/hel_plus ===
  RSE: JLAB-TAPE-SE                              Files: 609/609 (complete)
  Total Size: 92.346 GB (609 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 12013/12013 (complete)
  Total Size: 1.304 TB (12013 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 17/17 (complete)
  Total Size: 4.653 GB (17 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 93/93 (complete)
  Total Size: 15.617 GB (93 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 44/44 (complete)
  Total Size: 10.440 GB (44 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/18x275/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 9056/9056 (complete)
  Total Size: 1.007 TB (9056 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/SIDIS/D0_ABCONV/HFsim-BeAGLE/BeAGLE1.03.01-1.0/eAu/5x41/q2_1to10000 ===
  RSE: JLAB-TAPE-SE                              Files: 21642/21642 (complete)
  Total Size: 114.805 GB (21642 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 84/84 (complete)
  Total Size: 21.987 GB (84 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/10x100/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 5811/5811 (complete)
  Total Size: 901.352 GB (5811 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/CC/18x275/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 12757/12757 (complete)
  Total Size: 1.323 TB (12757 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 30/30 (complete)
  Total Size: 10.225 GB (30 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 216/216 (complete)
  Total Size: 47.287 GB (216 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 55/55 (complete)
  Total Size: 22.807 GB (55 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 44/44 (complete)
  Total Size: 21.374 GB (44 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 93/93 (complete)
  Total Size: 6.700 GB (93 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.238 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/sartre1.39-1.0/eAu/coherent/bsat/10x100 ===
  RSE: JLAB-TAPE-SE                              Files: 3356/3356 (complete)
  Total Size: 276.097 GB (3356 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 55/55 (complete)
  Total Size: 19.555 GB (55 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 186/186 (complete)
  Total Size: 42.562 GB (186 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 51/51 (complete)
  Total Size: 25.025 GB (51 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/2GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 515/515 (complete)
  Total Size: 117.099 GB (515 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/proton/pythia8.306-1.0/100GeV ===
  RSE: JLAB-TAPE-SE                              Files: 4298/4298 (complete)
  Total Size: 630.046 GB (4298 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/10x100/minQ2=1000 ===
  RSE: JLAB-TAPE-SE                              Files: 8362/8362 (complete)
  Total Size: 1.305 TB (8362 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/5x41/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 13835/13835 (complete)
  Total Size: 3.512 TB (13835 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/18x275/minQ2=1 ===
  RSE: JLAB-TAPE-SE                              Files: 8357/8357 (complete)
  Total Size: 681.894 GB (8357 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/5x41/minQ2=10 ===
  RSE: JLAB-TAPE-SE                              Files: 6049/6049 (complete)
  Total Size: 612.513 GB (6049 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/NC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 6544/6544 (complete)
  Total Size: 763.253 GB (6544 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/CC/5x41/minQ2=100 ===
  RSE: JLAB-TAPE-SE                              Files: 3345/3345 (complete)
  Total Size: 593.360 GB (3345 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/18x275 ===
  RSE: JLAB-TAPE-SE                              Files: 3332/3332 (complete)
  Total Size: 54.865 GB (3332 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/EpIC_v1.1.6-1.1/10x130/q2_1_100 ===
  RSE: JLAB-TAPE-SE                              Files: 912/912 (complete)
  Total Size: 25.116 GB (912 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DVCS_ABCONV/5x41 ===
  RSE: JLAB-TAPE-SE                              Files: 2925/2925 (complete)
  Total Size: 150.335 GB (2925 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/DIS/BeAGLE1.03.02-1.0/eAu/10x100/q2_10to100 ===
  RSE: JLAB-TAPE-SE                              Files: 6798/6798 (complete)
  Total Size: 750.542 GB (6798 files)

=== epic:/RECO/25.07.0/epic_craterlake_without_zdc/DIS/BeAGLE1.03.02-1.0/eAu/5x41/q2_10to100 ===
  RSE: JLAB-TAPE-SE                              Files: 3897/3897 (complete)
  Total Size: 553.647 GB (3897 files)

=== epic:/RECO/25.07.0/epic_craterlake/DIS/BeAGLE1.03.02-1.0/eCu/en/10x115/q2_1to1000 ===
  RSE: JLAB-TAPE-SE                              Files: 568/568 (complete)
  Total Size: 66.049 GB (568 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 70/70 (complete)
  Total Size: 14.868 GB (70 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 59/59 (complete)
  Total Size: 18.899 GB (59 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 85/85 (complete)
  Total Size: 26.569 GB (85 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/18x275/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 472/472 (complete)
  Total Size: 21.746 GB (472 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 3.364 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/10x100/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 172/172 (complete)
  Total Size: 8.917 GB (172 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 5.266 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 87/87 (complete)
  Total Size: 27.367 GB (87 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 57/57 (complete)
  Total Size: 7.154 GB (57 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/500MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 33/33 (complete)
  Total Size: 10.781 GB (33 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 77/77 (complete)
  Total Size: 24.873 GB (77 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_JPSI_ABCONV/lAger3.6.1-1.0/5x41/hiAcc ===
  RSE: JLAB-TAPE-SE                              Files: 32/32 (complete)
  Total Size: 3.878 GB (32 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 188/188 (complete)
  Total Size: 37.547 GB (188 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/coherent_eCu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 197/197 (complete)
  Total Size: 582.503 MB (197 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DIFFRACTIVE_PHI_ABCONV/coherent_eRu/eSTARlight1.2.0-1.0/10x115/q2_0to10 ===
  RSE: JLAB-TAPE-SE                              Files: 304/304 (complete)
  Total Size: 712.779 MB (304 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 237/237 (complete)
  Total Size: 50.700 GB (237 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 4.357 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 8.963 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 224/224 (complete)
  Total Size: 44.318 GB (224 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/2GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 95/95 (complete)
  Total Size: 20.172 GB (95 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/TCS_ABCONV/18x275/hel_minus ===
  RSE: JLAB-TAPE-SE                              Files: 1986/1986 (complete)
  Total Size: 123.000 GB (1986 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.359 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/1GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 132/132 (complete)
  Total Size: 15.787 GB (132 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 5.228 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 21/21 (complete)
  Total Size: 4.355 GB (21 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 352/352 (complete)
  Total Size: 67.092 GB (352 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.154 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.045 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/100MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 28/28 (complete)
  Total Size: 3.149 GB (28 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 363/363 (complete)
  Total Size: 56.067 GB (363 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 167/167 (complete)
  Total Size: 34.873 GB (167 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/200MeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 23/23 (complete)
  Total Size: 8.206 GB (23 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 146/146 (complete)
  Total Size: 24.685 GB (146 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/40GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 650/650 (complete)
  Total Size: 92.108 GB (650 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/5GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 153/153 (complete)
  Total Size: 22.265 GB (153 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.2/10x100/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 316/316 (complete)
  Total Size: 12.549 GB (316 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/10GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 219/219 (complete)
  Total Size: 38.202 GB (219 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/20GeV/3to50deg ===
  RSE: JLAB-TAPE-SE                              Files: 218/218 (complete)
  Total Size: 48.339 GB (218 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_3_10/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 184/184 (complete)
  Total Size: 6.600 GB (184 files)

=== epic:/RECO/25.07.0/epic_craterlake/EXCLUSIVE/DEMP/DEMPgen-1.2.3/10x130/q2_10_20/pi+ ===
  RSE: JLAB-TAPE-SE                              Files: 184/184 (complete)
  Total Size: 12.676 GB (184 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 164/164 (complete)
  Total Size: 29.381 GB (164 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 107/107 (complete)
  Total Size: 40.865 GB (107 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 6.176 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 126/126 (complete)
  Total Size: 47.952 GB (126 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 36/36 (complete)
  Total Size: 16.767 GB (36 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 180/180 (complete)
  Total Size: 51.453 GB (180 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 11.912 GB (22 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 6.442 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 8.696 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 86/86 (complete)
  Total Size: 27.641 GB (86 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/20GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 246/246 (complete)
  Total Size: 54.100 GB (246 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 7.115 GB (24 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 20.504 GB (50 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 45/45 (complete)
  Total Size: 13.441 GB (45 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 5.041 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/1GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 213/213 (complete)
  Total Size: 52.435 GB (213 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 541/541 (complete)
  Total Size: 67.254 GB (541 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/proton/2GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 46/46 (complete)
  Total Size: 17.282 GB (46 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/500MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 22/22 (complete)
  Total Size: 7.066 GB (22 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 231/231 (complete)
  Total Size: 71.726 GB (231 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 1477/1477 (complete)
  Total Size: 265.776 GB (1477 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 114/114 (complete)
  Total Size: 26.529 GB (114 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/200MeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 242/242 (complete)
  Total Size: 8.555 GB (242 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/100MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 20/20 (complete)
  Total Size: 4.175 GB (20 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/100MeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 91/91 (complete)
  Total Size: 16.689 GB (91 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 54/54 (complete)
  Total Size: 16.476 GB (54 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi0/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 377/377 (complete)
  Total Size: 74.638 GB (377 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/gamma/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 50/50 (complete)
  Total Size: 14.757 GB (50 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 225/225 (complete)
  Total Size: 67.830 GB (225 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 83/83 (complete)
  Total Size: 35.629 GB (83 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/500MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 24/24 (complete)
  Total Size: 9.036 GB (24 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 127/127 (complete)
  Total Size: 34.370 GB (127 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 67/67 (complete)
  Total Size: 21.974 GB (67 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/200MeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 18/18 (complete)
  Total Size: 4.253 GB (18 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi-/2GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 48/48 (complete)
  Total Size: 23.780 GB (48 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon-/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 85/85 (complete)
  Total Size: 37.066 GB (85 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/10GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 197/197 (complete)
  Total Size: 47.803 GB (197 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/BEAMGAS/electron/brems/EIC_ESR_Xsuite/dataprod_rel_1.0.0/18x275/10000Ahr/MachineRuntime10ms ===
  RSE: JLAB-TAPE-SE                              Files: 1/1 (complete)
  Total Size: 152.539 MB (1 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/kaon+/5GeV/45to135deg ===
  RSE: JLAB-TAPE-SE                              Files: 235/235 (complete)
  Total Size: 28.930 GB (235 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/e+/1GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 53/53 (complete)
  Total Size: 16.468 GB (53 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/neutron/20GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 206/206 (complete)
  Total Size: 62.669 GB (206 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/pi+/5GeV/130to177deg ===
  RSE: JLAB-TAPE-SE                              Files: 83/83 (complete)
  Total Size: 34.521 GB (83 files)

=== epic:/RECO/25.07.0/epic_craterlake/SINGLE/mu-/10GeV/etaScan ===
  RSE: JLAB-TAPE-SE                              Files: 211/211 (complete)
  Total Size: 57.085 GB (211 files)

=== epic:/RECO/25.07.0/epic_craterlake/BACKGROUNDS/MERGED/HEPMC_merger-1.0.2/10x100/RealisticSignalPerFrame ===
  RSE: JLAB-TAPE-SE                              Files: 31/31 (complete)
  Total Size: 2.607 GB (31 files)

=== epic:/RECO/25.07.0/epic_craterlake/SIDIS/pythia6-eic/1.0.0/10x100/q2_0to1 ===
  RSE: JLAB-TAPE-SE                              Files: 23888/23888 (complete)
  Total Size: 4.812 TB (23888 files)

=== CAMPAIGN SUMMARY ===
  RSE: JLAB-TAPE-SE                              Total Size: 51.643 TB        Total Files: 505233
```
